--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
           private-key: ${CONFIG_SERVER_PRIVATE_KEY}
         encrypt:
           enabled: true
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:local}
 
 server:
   port: 8888
@@ -18,6 +20,6 @@ server:
 encrypt:
   key: ${CONFIG_SERVER_ENCRYPT_KEY}
 
+# Logback 설정은 logback-spring.xml에서 관리
 logging:
-  level:
-    root: info
+  config: classpath:logback-spring.xml
