--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,11 @@ spring:
       server:
         git:
           uri: ${CONFIG_SERVER_GIT_URI}
-          ignore-local-ssh-settings: true
+          username: ${CONFIG_SERVER_GIT_USERNAME}
+          password: ${CONFIG_SERVER_GIT_TOKEN}
           search-paths: lostark-config
-          private-key: ${CONFIG_SERVER_PRIVATE_KEY}
-        encrypt:
-          enabled: true
+          encrypt:
+            enabled: true
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
 
